@@ -21,7 +21,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            @{argLine} ${jetty.surefire.argLine} --add-opens org.eclipse.jetty.session/org.eclipse.jetty.session=ALL-UNNAMED
+            @{argLine} ${jetty.surefire.argLine} --add-reads org.eclipse.jetty.session=org.eclipse.jetty.logging --add-opens org.eclipse.jetty.session/org.eclipse.jetty.session=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
